--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 /** Header */
 .header {
     padding: 10px 0;
-    background-color: #2eb2ff;
 }
 
 .header-inner {
@@ -13,6 +12,19 @@
 .header__logo--wrap {
     width: 70px;
     height: 70px;
+    display: flex;
+    align-items: center;
+}
+
+.header__logo--wrap span {
+    white-space: nowrap;
+    font-size: 3rem;
+    font-weight: 700;
+    background-color: #21d4fd;
+    background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
+    color: transparent;
+    background-clip: text;
+    padding: 35px 15px;
 }
 
 .header__logo {
@@ -20,14 +32,268 @@
     height: 100%;
     object-fit: cover;
 
-    filter: hue-rotate(27deg); 
+    filter: hue-rotate(27deg);
 }
 .header__nav--list {
     display: flex;
-    gap: 40px;
+    gap: 50px;
 }
 
 .header__nav--item a {
     color: #fff;
     font-weight: 600;
+}
+
+/** Hero */
+.hero {
+    padding: 100px 0;
+}
+
+.hero-inner {
+    display: flex;
+}
+
+.hero-left,
+.hero-right {
+    max-width: 50%;
+}
+
+.hero__heading {
+    font-size: 5rem;
+    font-weight: 300;
+    background-image: linear-gradient(
+        to right,
+        #808080,
+        #ffffff,
+        #00ffff,
+        #ff0000
+    );
+    display: inline-block;
+    background-clip: text;
+    color: transparent;
+    padding: 5px 0;
+}
+
+.hero__heading span {
+    font-weight: 700;
+}
+
+.hero__label {
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin: 25px 0 0 100px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+    color: #fff;
+}
+
+.hero__label::before {
+    content: "";
+    position: absolute;
+    height: 1.2px;
+    width: 80px;
+    background-color: currentColor;
+    top: 50%;
+    transform: translateY(50%);
+    left: -95px;
+}
+
+.hero__label svg {
+    width: 30px;
+    height: 30px;
+    margin-top: 5px;
+}
+
+.hero__desc {
+    text-align: justify;
+    margin-top: 25px;
+    line-height: 1.76;
+    font-weight: 300;
+    color: #eee;
+}
+
+.hero-list {
+    margin-top: 25px;
+}
+
+.hero-item:not(:first-child) {
+    margin-top: 10px;
+}
+
+.hero-item {
+    font-size: 1.8rem;
+    color: #9c9c9c;
+    display: flex;
+    column-gap: 10px;
+}
+
+.hero-item::before {
+    content: "\f00c";
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    color: #fff;
+}
+
+.hero-right__img--wrap {
+    width: 480px;
+    height: 640px;
+    position: relative;
+}
+
+.hero-right__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: -230px;
+    left: 150px;
+}
+
+.hero-btn {
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: #e0e0e0;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin-top: 35px;
+}
+
+.hero-btn:before {
+    content: "";
+    background: linear-gradient(
+        45deg,
+        #ff0000,
+        #ff7300,
+        #fffb00,
+        #48ff00,
+        #00ffd5,
+        #002bff,
+        #7a00ff,
+        #ff00c8,
+        #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-hero-btn 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+@keyframes glowing-hero-btn {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.hero-btn:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #0a0a14;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+.hero-end-list {
+    display: flex;
+    column-gap: 100px;
+    justify-content: center;
+    padding: 10px 0;
+    background-color: #10101a;
+    transform: rotate(-5deg);
+    margin-top: -210px;
+    width: 100%;
+}
+
+.hero-end-item {
+    font-size: 2rem;
+    color: #acacab;
+    font-weight: 600;
+    display: flex;
+    column-gap: 30px;
+}
+
+.hero-end-item::before {
+    content: "\f004";
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+}
+
+.hero-inner2 {
+    margin-top: 55px;
+}
+
+.hero-inner2-list {
+    display: flex;
+    gap: 50px;
+}
+
+.hero-inner2-item a {
+    color: #fff;
+    font-size: 1.3rem;
+    font-weight: 700;
+    display: flex;
+    column-gap: 10px;
+}
+
+.hero-inner2-item a i {
+    font-size: 1.4rem;
+}
+
+.hero-inner2-item:nth-child(1) a {
+    margin-left: 120px;
+    position: relative;
+}
+
+.hero-inner2-item:nth-child(1) a::before {
+    content: "";
+    position: absolute;
+    width: 100px;
+    height: 1.2px;
+    background-color: #666;
+    left: -70px;
+    top: 50%;
+    transform: translateX(-50%);
+}
+
+.hero-inner2-item:nth-child(4) a {
+    margin-left: 400px;
+    position: relative;
+    font-weight: 300;
+}
+
+.hero-inner2-item:nth-child(4) a::before {
+    content: "";
+    position: absolute;
+    width: 405px;
+    height: 1.2px;
+    background-color: #666;
+    left: -225px;
+    top: 50%;
+    transform: translateX(-50%);
 }
