--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,3 +297,143 @@
     top: 50%;
     transform: translateX(-50%);
 }
+
+.new-image-inner-bottom {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgb(0, 0, 0);
+    margin-top: 50px;
+
+}
+
+.carousel {
+    width: 100%;
+    height: 700px;
+    flex-grow: 1;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.controls {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 0 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.controls button {
+    background: none;
+    outline: none;
+    border: none;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.controls button span {
+    color: #fff;
+    font-size: 4rem;
+}
+
+.controls button:hover {
+    background: rgba(255, 255, 255, 0.4);
+}
+
+.slide-center {
+    width: fit-content;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(calc(50% - 150px));
+}
+
+.slider {
+    width: fit-content;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.25s ease-in-out;
+}
+
+.slide {
+    width: 140px;
+    height: 175px;
+    position: relative;
+    border-radius: 2mm;
+    margin: 0 10px;
+    transition: 0.25s;
+}
+
+.slide img {
+    width: 140px;
+    height: 175px;
+    border-radius: 2mm;
+    -webkit-box-reflect: below 0px
+        linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
+    transition: 0.25s;
+}
+
+.slide::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 5px 5px 15px rgba(255, 255, 255, 0.5);
+    border-radius: 2mm;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.slide__desc {
+    position: absolute;
+    width: 90%;
+    height: 60px;
+    top: 10px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 10mm;
+    background: rgba(0, 0, 0, 0.7);
+    font-weight: 500;
+    text-align: center;
+    padding: 15px;
+    color: #fff;
+    transition: 0.2s;
+    opacity: 0;
+}
+
+.slide.active {
+    width: 280px;
+    height: 350px;
+}
+
+.slide.active img {
+    width: 280px;
+    height: 350px;
+    -webkit-box-reflect: below 0px
+        linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
+}
+
+.slide.active:hover .slide__desc {
+    opacity: 1;
+}
+
