--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,10 @@
 .header__nav--item a {
     color: #fff;
     font-weight: 600;
+    padding: 10px 20px;
+    display: inline-block;
+    z-index: 2;
+    position: relative;
 }
 
 /** Hero */
@@ -137,8 +141,8 @@
 }
 
 .hero-right__img--wrap {
-    width: 480px;
-    height: 640px;
+    width: 580px;
+    height: 580px;
     position: relative;
 }
 
@@ -147,8 +151,8 @@
     height: 100%;
     object-fit: cover;
     position: absolute;
-    top: -230px;
-    left: 150px;
+    top: -150px;
+    left: 100px;
 }
 
 .hero-btn {
@@ -226,7 +230,7 @@
     padding: 10px 0;
     background-color: #10101a;
     transform: rotate(-5deg);
-    margin-top: -210px;
+    margin-top: -140px;
     width: 100%;
 }
 
@@ -307,7 +311,6 @@
     flex-direction: column;
     background-color: rgb(0, 0, 0);
     margin-top: 50px;
-
 }
 
 .carousel {
@@ -407,7 +410,7 @@
 .slide__desc {
     position: absolute;
     width: 90%;
-    height: 60px;
+    height: fit-content;
     top: 10px;
     left: 50%;
     transform: translate(-50%, 0);
@@ -419,6 +422,8 @@
     color: #fff;
     transition: 0.2s;
     opacity: 0;
+
+    line-height: 1.5;
 }
 
 .slide.active {
@@ -436,4 +441,3 @@
 .slide.active:hover .slide__desc {
     opacity: 1;
 }
-
